Adjust Add Player button design and dynamically desplay the gameboard in the DOM

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <button class="submit">Submit</button>
             </form>
-            <button class="add show">+</button>
+            <button class="add show">Add Player</button>
         </div>
     </main>
 
@@ -93,7 +93,7 @@
                 addPlayerButton.textContent = "X";
                 formElement.style.display = "block";
             } else if (addPlayerButton.classList.contains("show")) {
-                addPlayerButton.textContent = "+";
+                addPlayerButton.textContent = "Add Player";
                 formElement.style.display = "none";
             }
         }
