Changea cell's value and color whenerver a player successfully made a move inside that cell

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="board">
                 <h4 class="player one">Name: X</h4>
                 <div class="cells">
-                    <div class="cell">0</div>
+                    <!-- <div class="cell">0</div>
                     <div class="cell">1</div>
                     <div class="cell">2</div>
                     <div class="cell">3</div>
@@ -25,7 +25,7 @@
                     <div class="cell">5</div>
                     <div class="cell">6</div>
                     <div class="cell o">O</div>
-                    <div class="cell">8</div>
+                    <div class="cell">8</div> -->
                 </div>
                 <h4 class="player two">Name: O</h4>
 
