Desing the make move UI, and implement the moke move funcitionality in the playMatch function

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <div class="container">
             <div></div>
             <div class="board">
+                <div class="move-input-container">
+                    <p class="current-player">Doudou's Turn</p>
+                    <input type="number" class="player-move" placeholder="Enter your move (1-9)" min="1" max="9"
+                        required />
+                    <button class="submit-move">Submit Move</button>
+                </div>
                 <h4 class="player one">Name: X</h4>
                 <div class="cells">
                     <!-- <div class="cell">0</div>
