Implemeent start and reset buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div></div>
             <div class="board">
                 <div class="move-input-container">
-                    <p class="current-player">Doudou's Turn</p>
+                    <p class="current-player"></p>
                     <input type="number" class="player-move" placeholder="Enter your move (1-9)" min="1" max="9"
                         required />
                     <button class="submit-move">Submit Move</button>
@@ -35,7 +35,7 @@
                 </div>
                 <h4 class="player two">Name: O</h4>
 
-                <h3 class="result">NAME WON!</h3>
+                <h3 class="result"></h3>
 
                 <div class="buttons">
                     <button class="start">START</button>
